# Resume_Data_Extraction

./: README.md  pyproject.toml
app/: main.py
app/api/v1/endpoints/: cv_extract.py
app/core/: config.py
app/models/: resume_model.py
app/services/: llm.py  pdf_to_image.py
tests/: test_genai_endpoints.py
